--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "@lanaqi/autojs6-typescript-template",
   "version": "0.0.1-alpha.1",
   "scripts": {
+    "test": "jest",
+    "test-c": "jest --coverage",
     "build:dev": "tsup --env.NODE_ENV=development",
     "build:prod": "tsup --env.NODE_ENV=production",
     "run:dev": "tsup --env.NODE_ENV=development --env.DEPLOY_ACTION=run",
@@ -22,9 +24,13 @@
     "@sm003/autojs6-dts": "^2.1.0",
     "@swc/core": "^1.3.68",
     "@tsconfig/recommended": "^1.0.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.4.1",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.3",
     "tslib": "^2.6.0",
     "tsup": "^7.1.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.4.5"
   }
 }
