规则引擎,指令编排, autojs api防腐层

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
   "include": [
     "./src/**/*",
     "./lib/**/*",
-    "./tests/**/*"
+    "./tests/**/*",
+    "./build/**/*"
 
   ],
   "exclude": [
