--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.4.1",
     "babel-jest": "^29.7.0",
+    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.3",
     "tslib": "^2.6.0",
