--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lanaqi/autojs6-typescript-template",
+  "name": "pocket-war-ass",
   "version": "0.0.1-alpha.1",
   "scripts": {
     "test": "jest",
@@ -27,7 +27,6 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.4.1",
     "babel-jest": "^29.7.0",
-    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.3",
     "tslib": "^2.6.0",
