--- a/src/assets/project.json
+++ b/src/assets/project.json
@@ -1,8 +1,8 @@
 {
-    "name": "@lanaqi/autojs6-typescript-template",
+    "name": "pocket-war-ass",
     "versionName": "0.0.1",
     "versionCode": 1,
-    "packageName": "com.lanaqi.autojs6.template",
+    "packageName": "com.ys.pocket.war",
     "main": "main.js",
     "launchConfig": {
         "hideLogs": false
