--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,10 +1,8 @@
-name: Build and Release
-
-on: [push]
-#  push:
-#    branches:
-#      - main
-
+name: Release
+on:
+  push:
+    tags:
+      - 'v*'
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -24,8 +22,35 @@ jobs:
       - name: Build project
         run: npm run build:dev
 
-      - name: Compress build artifacts
-        run: zip -r build-artifacts.zip dist/
+      - name: Verify build output
+        run: |
+          echo "Contents of dist directory before zipping:"
+          ls -l dist
+
+      - name: Create artifact
+        run: |
+          zip -r pocket-war.zip dist/pocket-war-ass
+          echo "Contents of current directory after zipping:"
+          ls -l
+
+      - name: Verify zip file
+        run: |
+          echo "Verifying zip file contents:"
+          unzip -l pocket-war.zip
+
+      - name: Upload to Server
+        env:
+          SERVER_URL: ${{ vars.SERVER_URL }}
+        run: |
+          echo "Files in current directory:"
+          FILENAME="pocket-war.zip"
+          UPLOAD_URL="${SERVER_URL}/files/upload"
+          echo "UPLOAD_URL=${UPLOAD_URL}"
+          curl $UPLOAD_URL -F "file=@${FILENAME}"
+      #          curl -X POST -F "file=@${FILENAME}" $UPLOAD_URL
+
+#      - name: Compress build artifacts
+#        run: zip -r pocket-war.zip dist/
 
       - name: Create Release
         id: create_release
@@ -40,46 +65,31 @@ jobs:
           prerelease: false
 
       - name: Upload Release Asset
+        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build-artifacts.zip
-          asset_name: build-artifacts.zip
+          asset_path: pocket-war.zip
+          asset_name: pocket-war.zip
           asset_content_type: application/zip
 
-      - name: Install jq
-        run: sudo apt-get install -y jq
-
       - name: Generate download URL
-        id: generate_url
+        id: generate-url
         run: |
-          ASSET_ID=$(curl -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/releases/latest \
-            | jq -r '.assets[] | select(.name == "build-artifacts.zip") | .id')
-          
-          DOWNLOAD_URL=$(curl -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            -X POST https://api.github.com/repos/${{ github.repository }}/releases/assets/$ASSET_ID/generate-url \
-            | jq -r '.url')
-          
-          echo "Download URL: $DOWNLOAD_URL"
+          DOWNLOAD_URL="https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/pocket-war.zip"
+          echo "::set-output name=download_url::$DOWNLOAD_URL"
 
-      - name: Print download URL
-        run: echo "Download URL is ${{ steps.generate_url.outputs.url }}"
+      - name: Download Asset
+        run: curl -L -o pocket-war.zip ${{ steps.generate-url.outputs.download_url }}
 
-      - name: Update Release Notes
-        uses: actions/github-script@v3
-        with:
-          github-token: ${{ secrets.PAT_TOKEN }}
-          script: |
-            const release_id = `{{ steps.create_release.outputs.id }}`;
-            const download_url = `{{ steps.generate_url.outputs.download_url }}`;
-            await github.repos.updateRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              release_id: release_id,
-              body: `Download URL: ${download_url}`
-            });
+#      - name: Upload to Server
+#        env:
+#          SERVER_URL: ${{ vars.SERVER_URL }}
+#        run: |
+#          echo "Files in current directory:"
+#          FILENAME="pocket-war.zip"
+#          UPLOAD_URL="${SERVER_URL}/files/upload"
+#          echo "UPLOAD_URL=${UPLOAD_URL}"
+#          curl $UPLOAD_URL -F "file=@${FILENAME}"
